# Vibe-Clinical-Trials

./: .cursorconfig  .env.example  .gitignore  .vercelignore  CLAUDE.md  QDRANT_SETUP.md  README.md  SETUP.md  TESTING.md  VERCEL_DEPLOYMENT.md  check_deps.py  check_sizes.sh  codecov.yml  connections.md  package-lock.json  package.json  requirements-full.txt  requirements.txt  vercel.json
.ai/: epic1-implementation.md
.bmad-core/: install-manifest.yml
.github/: README.md  pull_request_template.md
api/: health.py  index.py  protocols.py  simple.js  test.py  upload-protocol.py
backend/: .env.example  README.md  coverage.json  pyproject.toml  test_retrieval.py
backend/app/: __init__.py  config.py  database.py  database.py.backup  handler.py  main.py  models.py  vercel_adapter.py
backend/app/api/: __init__.py  icf_generation.py  protocols.py
backend/app/prompts/: __init__.py  generation_prompts.py  icf_prompts.py  site_checklist_prompts.py
backend/app/services/: __init__.py  document_generator.py  icf_service.py  icf_service.py.backup  langchain_qdrant_service.py  pdf_processor.py  qdrant_service.py  qdrant_service_vercel.py  text_processor.py
backend/tests/: __init__.py  conftest.py  conftest_qdrant.py  test_api_icf_generation.py  test_api_protocols.py  test_database.py  test_database.py.backup  test_document_generator.py  test_frontend_integration.py  test_icf_service.py  test_langchain_qdrant_service.py  test_main.py  test_models.py  test_qdrant_protocols.py  test_qdrant_service.py  test_text_processor.py  test_vercel_functions.py
docs/: VERCEL_DEPLOYMENT_GUIDE.md  architecture-clinical-trial-accelerator.md  architecture.md  backend-api-routes.md  comprehensive_testing_strategy.md  database_architecture.md  deployment-checklist.md  development_task_list.md  editor_ui_design.md  enhanced-regeneration-implementation.md  epic-1.md  epic-2-langgraph-ai-prompts.md  epic-4.md  final_pre_execution_checklist.md  frontend-api-usage.md  index.md  mvp_user_stories.md  prd.md  prd.md.bak  product_requirements_document.md  (+4 more)
(+128 files in other folders)
